After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734123 - Rhythmbox 3.0.2 crashes if attempting to load pls stream before any other type
Rhythmbox 3.0.2 crashes if attempting to load pls stream before any other type
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: Internet Radio
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-08-01 14:46 UTC by Steeve McCauley
Modified: 2014-08-16 14:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
debug player trace while attempting to play CBC pls file (6.36 KB, application/octet-stream)
2014-08-04 13:24 UTC, Steeve McCauley
Details
gdb backtrace (26.44 KB, application/octet-stream)
2014-08-06 15:21 UTC, Steeve McCauley
Details
gdb backtrace 2 (39.71 KB, application/octet-stream)
2014-08-06 15:43 UTC, Steeve McCauley
Details

Description Steeve McCauley 2014-08-01 14:46:14 UTC
Load rhythmbox and attempt to load the following url always crashes,

http://playerservices.streamtheworld.com/pls/CBC_R1_MTL_H.pls

with the following message,

Unable to open ~/.mtpz-data for reading, MTPZ disabled.**
Rhythmbox:ERROR:rb-player.c:638:_rb_player_emit_buffering: assertion failed: (rb_is_main_thread ())
Aborted (core dumped)

If I then open a asx stream,

http://www.vpr.net/vpr_files/stream_playlists/vprclassicalhigh.asx

and then attempt to re-open the previous pls stream it succeeds.
Comment 1 Jonathan Matthew 2014-08-01 22:23:46 UTC
I can't reproduce this.  Please attach a stack trace and the output from 'rhythmbox -D player' showing this occurring.
Comment 2 Steeve McCauley 2014-08-04 13:24:46 UTC
Created attachment 282435 [details]
debug player trace while attempting to play CBC pls file
Comment 3 Steeve McCauley 2014-08-04 13:25:12 UTC
I can reproduce this every time in 3.0.2 on ubuntu 14.04

$ cat /etc/os-release 
NAME="Ubuntu"
VERSION="14.04.1 LTS, Trusty Tahr"
ID=ubuntu
ID_LIKE=debian
PRETTY_NAME="Ubuntu 14.04.1 LTS"
VERSION_ID="14.04"
HOME_URL="http://www.ubuntu.com/"
SUPPORT_URL="http://help.ubuntu.com/"
BUG_REPORT_URL="http://bugs.launchpad.net/ubuntu/"

$ uname -a
Linux satchmo 3.13.0-32-generic #57-Ubuntu SMP Tue Jul 15 03:51:08 UTC 2014 x86_64 x86_64 x86_64 GNU/Linux
Comment 4 Steeve McCauley 2014-08-04 13:27:44 UTC
The problem did not occur on an up to date redhat fedora 20 box with rhythmbox 3.0.3,

$ cat /etc/redhat-release 
Fedora release 20 (Heisenbug)

$ rpm -q rhythmbox
rhythmbox-3.0.3-1.fc20.x86_64
Comment 5 Jonathan Matthew 2014-08-04 21:29:00 UTC
(In reply to comment #2)
> Created an attachment (id=282435) [details]
> debug player trace while attempting to play CBC pls file

This is sort of useful, but can you get a stack trace too?  See https://wiki.gnome.org/Community/GettingInTouch/Bugzilla/GettingTraces/Details#gdb-not-yet-running if you're not sure what to do.
Comment 6 Steeve McCauley 2014-08-06 15:21:46 UTC
Created attachment 282713 [details]
gdb backtrace

Sorry, missed that bit of the request.
Comment 7 Steeve McCauley 2014-08-06 15:43:20 UTC
Created attachment 282714 [details]
gdb backtrace 2

This version is better than the previous.
Comment 8 Jonathan Matthew 2014-08-16 14:21:24 UTC
fixed in commit 38625a6