xfade: always handle bus messages on the main thread

Since all signals emitted from the player need to be emitted on the
main thread, we can't do anything much with bus messages elsewhere.

https://bugzilla.gnome.org/show_bug.cgi?id=734123